Awwotations script to deploy on test env, ip list, additional items on board component.
